fix broken UI

--- a/agent-launcher/src/pages/home/chat-agent/ChatAgent/components/ChatMessage/ChatMessage.module.scss
+++ b/agent-launcher/src/pages/home/chat-agent/ChatAgent/components/ChatMessage/ChatMessage.module.scss
@@ -6,7 +6,7 @@
     .content {
         border-radius: 12px;
         padding: 16px;
-        max-width: 80%;
+        max-width: calc(calc(100vw / 2) * 0.8);
         width: fit-content;
         gap: 8px;
         &.question {
